--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "quill": "^1.3.7",
     "quill-image-resize-module": "^3.0.0",
     "vue": "^2.6.11",
