--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "js-cookie": "^2.2.1",
     "quill": "^1.3.7",
     "quill-image-resize-module": "^3.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-svg-loader": "^0.16.0",
     "vue2-editor": "^2.10.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
