--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^8.9.0",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "quill": "^1.3.7",
